refactor: change to

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -100,16 +100,16 @@
 </nav>
 <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="scrollspy-example bg-body-tertiary p-3 rounded-2" tabindex="0">
   <h4 id="scrollspyHeading1">Equipo</h4>
-  <p>Contamos con profesionales en aplicaciones móviles y web con alrededor de 10 años de experiencia.</p>
+  <p>Contamos con profesionales en mantenimiento de PC's con alrededor de 10 años de experiencia.</p>
   <h4 id="scrollspyHeading2">Historia</h4>
-  <p>Empezamos sirviendole a personas como tu, personas que quieran tener una empresa o que ya la tengan y busquen darle herramientas para mejorar sus ingresos.</p>
+  <p>Empezamos sirviendole a personas como tu, personas que quieran tener una empresa o que ya la tengan y busquen darle y mantener herramientas para mejorar sus ingresos.</p>
   <h4 id="scrollspyHeading3">Especialidades</h4>
   <ul>
     <li>
-    Desarrollo de aplicaciones móviles (android e ios)
+    Mantenimiento de equipos (windows, apple y linux)
     </li>
     <li>
-      Desarrollo de aplicaciones web
+      Instalación de sistemas operativos (windows, macOS y linux)
     </li>
   </ul>
   <h4 id="scrollspyHeading4">Comentarios</h4>
