--- a/src/app/home/main/main.component.html
+++ b/src/app/home/main/main.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Pruebas de Calidad</a>
+    <a class="navbar-brand" href="#">Pruebas de Calidad para Sitios Web</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -100,7 +100,7 @@
 </nav>
 <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="scrollspy-example bg-body-tertiary p-3 rounded-2" tabindex="0">
   <h4 id="scrollspyHeading1">Equipo</h4>
-  <p>Contamos con profesionales experimentados en pruebas automatizadas.</p>
+  <p>Contamos con profesionales experimentados en pruebas manuales y automatizadas para sitios web.</p>
   <h4 id="scrollspyHeading2">Historia</h4>
   <p>Empezamos sirviendole a personas como tú, personas que quieran tener calidad en su empresa o que ya la tengan y busquen darle mas velocidad a la revisión de calidad de sus aplicaciones web.</p>
   <h4 id="scrollspyHeading3">Especialidades</h4>
@@ -114,10 +114,12 @@
   </ul>
   <h4 id="scrollspyHeading4">Comentarios</h4>
   <p>¡Pronto llegan las reseñas!</p>
-  <h4 id="scrollspyHeading5">Comunícate con nosotros
-    <a href="https://api.whatsapp.com/send?phone=+573025720019&text=Hola%20estoy%20interesad@%20en%20saber%20mas%20sobre%20pruebas%20de%20calidad" target="_blank">
-    <img src="assets/icons/WhatsAppButtonWhiteMedium.png" alt="WhatsApp" width="180" height="50">
+  <h4 id="scrollspyHeading5">
+    Comunícate con nosotros
+    <a href="https://api.whatsapp.com/send?phone=+573025720019&text=Hola%20estoy%20interesad@%20en%20el%20paquete%20de%20pruebas%20de%20calidad%20de%20cortesia" target="_blank">
+    <img src="assets/icons/WhatsAppButtonWhiteMedium.png" alt="WhatsApp" width="180" height="40">
     </a>
+    y solicita un paquete de pruebas gratis de cortesia
   </h4>
   <p>Comunícate con nosotros al  si no puedes encontrar una respuesta a tu pregunta.</p>
 </div>
