--- a/src/app/home/main/main.component.html
+++ b/src/app/home/main/main.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Pruebas de Calidad para Sitios Web</a>
+    <a class="navbar-brand" href="#">Pruebas de Calidad (Web)</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -46,24 +46,43 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img style="width: auto; height: 400px;" src="https://picsum.photos/300/100" class="d-block w-100" alt="slide1">
+      <img style="width: auto; height: 740px;" src="https://picsum.photos/300/100" class="d-block w-100" alt="slide1">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Bienvenid@ a:</h5>
-          <p>TECH+1</p>
+        <h5>Bienvenid@ a Test+1</h5>
+        <iframe
+        width="640"
+        height="350"
+        src="https://www.youtube.com/embed/chejS0IkHOw?si=bOpC3JSoVL7Jn8gj"
+        title="Pruebas Automatizadas"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen>
+        </iframe>
+        <h4>Optimiza tu Sitio Web con Nuestro Servicio de Pruebas de Calidad Web</h4>
+        <h4 style="color:red">[Obtén una cortesia de pruebas automatizadas en tu primer contacto]</h4>
+          <p>En el competitivo mundo en línea de hoy en día, la calidad de tu sitio web es fundamental para el éxito de tu negocio. Los visitantes esperan una experiencia fluida y sin problemas, y los motores de búsqueda favorecen los sitios web que ofrecen un rendimiento óptimo. ¿Estás seguro de que tu sitio web cumple con estos estándares de calidad?</p>
+          <a href="https://api.whatsapp.com/send?phone=+573025720019&text=Hola%20estoy%20interesad@%20en%20el%20paquete%20de%20pruebas%20de%20calidad%20de%20cortesia" target="_blank">
+            <img src="assets/icons/WhatsAppButtonWhiteMedium.png" alt="WhatsApp" width="180" height="40">
+          </a>
+        </div>
+    </div>
+    <div class="carousel-item">
+      <img style="width: auto; height: 740px;" src="https://picsum.photos/300/100" class="d-block w-100" alt="slide2">
+      <div class="carousel-caption d-none d-md-block">
+        <iframe
+        width="1024"
+        height="640"
+        src="https://www.youtube.com/embed/chejS0IkHOw?si=bOpC3JSoVL7Jn8gj"
+        title="Pruebas Automatizadas"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen>
+        </iframe>
       </div>
     </div>
     <div class="carousel-item">
-      <img style="width: auto; height: 400px;" src="https://picsum.photos/300/100" class="d-block w-100" alt="slide2">
+      <img style="width: auto; height: 740px;" src="https://picsum.photos/300/100" class="d-block w-100" alt="slide3">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Bienvenid@ a:</h5>
-          <p>TECH+1</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img style="width: auto; height: 400px;" src="https://picsum.photos/300/100" class="d-block w-100" alt="slide3">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Bienvenid@ a:</h5>
-          <p>TECH+1</p>
+        <h5>Test+1</h5>
+          <p>Pruebas de calidad web</p>
       </div>
     </div>
   </div>
@@ -110,6 +129,9 @@
     </li>
     <li>
     Pruebas manuales
+    </li>
+    <li>
+      Asesoria especializada (si quieres saber si estan desarrollando bien tu sitio web)
     </li>
   </ul>
   <h4 id="scrollspyHeading4">Comentarios</h4>
