--- a/src/app/home/main/main.component.html
+++ b/src/app/home/main/main.component.html
@@ -46,18 +46,10 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img style="width: auto; height: 740px;" src="https://picsum.photos/300/100" class="d-block w-100" alt="slide1">
-      <div class="carousel-caption d-none d-md-block">
+      <img class="img-fluid" style="width: auto; height: 600px;" src="https://picsum.photos/300/100" class="d-block w-100" alt="slide1">
+      <div class="carousel-caption">
         <h5>Bienvenid@ a Test+1</h5>
-        <iframe
-        width="640"
-        height="350"
-        src="https://www.youtube.com/embed/chejS0IkHOw?si=bOpC3JSoVL7Jn8gj"
-        title="Pruebas Automatizadas"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen>
-        </iframe>
-        <h4>Optimiza tu Sitio Web con Nuestro Servicio de Pruebas de Calidad Web</h4>
+        <h4>Optimiza tu Sitio Web con Nuestro Servicio de Pruebas de Calidad</h4>
         <h4 style="color:red">[Obtén una cortesia de pruebas automatizadas en tu primer contacto]</h4>
           <p>En el competitivo mundo en línea de hoy en día, la calidad de tu sitio web es fundamental para el éxito de tu negocio. Los visitantes esperan una experiencia fluida y sin problemas, y los motores de búsqueda favorecen los sitios web que ofrecen un rendimiento óptimo. ¿Estás seguro de que tu sitio web cumple con estos estándares de calidad?</p>
           <a href="https://api.whatsapp.com/send?phone=+573025720019&text=Hola%20estoy%20interesad@%20en%20el%20paquete%20de%20pruebas%20de%20calidad%20de%20cortesia" target="_blank">
@@ -66,23 +58,22 @@
         </div>
     </div>
     <div class="carousel-item">
-      <img style="width: auto; height: 740px;" src="https://picsum.photos/300/100" class="d-block w-100" alt="slide2">
-      <div class="carousel-caption d-none d-md-block">
-        <iframe
-        width="1024"
-        height="640"
-        src="https://www.youtube.com/embed/chejS0IkHOw?si=bOpC3JSoVL7Jn8gj"
-        title="Pruebas Automatizadas"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen>
-        </iframe>
+      <img style="width: auto; height: auto;" src="https://picsum.photos/300/100" class="d-block w-100" alt="slide2">
+      <div class="carousel-caption">
+        <h5>Test+1</h5>
+          <p>Pruebas de calidad web</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img style="width: auto; height: 740px;" src="https://picsum.photos/300/100" class="d-block w-100" alt="slide3">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Test+1</h5>
-          <p>Pruebas de calidad web</p>
+      <img style="width: auto; height: 260px;" src="https://picsum.photos/300/100" class="d-block w-100" alt="slide3">
+      <div class="carousel-caption">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item"
+          src="https://www.youtube.com/embed/chejS0IkHOw?rel=0&fs=1&color=white"
+          title="Pruebas Automatizadas"
+          allowfullscreen>
+          </iframe>
+        </div>
       </div>
     </div>
   </div>
@@ -96,9 +87,8 @@
   </button>
 </div>
 
-
 <nav id="navbar-example2" class="navbar bg-body-tertiary px-3 mb-3">
-  <a class="navbar-brand" href="#">Nuestra Empresa</a>
+  <a class="navbar-brand" href="#">Test+1</a>
   <ul class="nav nav-pills">
     <li class="nav-item">
       <a class="nav-link" href="#scrollspyHeading1">Equipo</a>
@@ -126,6 +116,13 @@
   <ul>
     <li>
     Pruebas automatizadas
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe class="embed-responsive-item"
+      src="https://www.youtube.com/embed/chejS0IkHOw?rel=0&fs=1&color=white"
+      title="Pruebas Automatizadas"
+      allowfullscreen>
+      </iframe>
+    </div>
     </li>
     <li>
     Pruebas manuales
