--- a/src/app/home/main/main.component.html
+++ b/src/app/home/main/main.component.html
@@ -1,20 +1,29 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Pruebas de Calidad (Web)</a>
+    <a class="navbar-brand" href="#">Tech+1</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-        </li>
         <!-- <li class="nav-item">
-          <a class="nav-link" href="#">Servicios</a>
+          <a class="nav-link" href="#">Contrátanos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Comunícate con nosotros</a>
+          <a class="nav-link" href="#">Planes</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Clientes</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Proyectos en desarrollo</a>
         </li> -->
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="/services">Servicios</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/home">Nosotros</a>
+        </li>
         <!-- <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Dropdown
@@ -46,13 +55,13 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="img-fluid" style="width: auto; height: 600px;" src="https://picsum.photos/300/100" class="d-block w-100" alt="slide1">
+      <img class="img-fluid" style="width: auto; height: 400px;" src="https://picsum.photos/300/100" class="d-block w-100" alt="slide1">
       <div class="carousel-caption">
-        <h5>Bienvenid@ a Test+1</h5>
-        <h4>Optimiza tu Sitio Web con Nuestro Servicio de Pruebas de Calidad</h4>
-        <h4 style="color:red">[Obtén una cortesia de pruebas automatizadas en tu primer contacto]</h4>
-          <p>En el competitivo mundo en línea de hoy en día, la calidad de tu sitio web es fundamental para el éxito de tu negocio. Los visitantes esperan una experiencia fluida y sin problemas, y los motores de búsqueda favorecen los sitios web que ofrecen un rendimiento óptimo. ¿Estás seguro de que tu sitio web cumple con estos estándares de calidad?</p>
-          <a href="https://api.whatsapp.com/send?phone=+573025720019&text=Hola%20estoy%20interesad@%20en%20el%20paquete%20de%20pruebas%20de%20calidad%20de%20cortesia" target="_blank">
+        <h5>Contrata</h5>
+        <h4></h4>
+        <h4 style="color:red">El desarrollo de tu aplicación (web ó movil).</h4>
+          <p>Empecemos</p>
+          <a href="https://api.whatsapp.com/send?phone=+573025720019&text=Hola%20estoy%20interesad@%20en%20el%20paquete%20de%20desarrollo" target="_blank">
             <img src="assets/icons/WhatsAppButtonWhiteMedium.png" alt="WhatsApp" width="180" height="40">
           </a>
         </div>
@@ -60,8 +69,10 @@
     <div class="carousel-item">
       <img style="width: auto; height: auto;" src="https://picsum.photos/300/100" class="d-block w-100" alt="slide2">
       <div class="carousel-caption">
-        <h5>Test+1</h5>
-          <p>Pruebas de calidad web</p>
+        <h5>Tech+1</h5>
+          <p>Plataformas Web</p>
+          <p>Aplicaciones Android</p>
+          <p>Aplicaciones iOS</p>
       </div>
     </div>
     <div class="carousel-item">
@@ -88,15 +99,21 @@
 </div>
 
 <nav id="navbar-example2" class="navbar bg-body-tertiary px-3 mb-3">
-  <a class="navbar-brand" href="#">Test+1</a>
+  <a class="navbar-brand" href="#">Desarrollo de Software</a>
   <ul class="nav nav-pills">
     <li class="nav-item">
       <a class="nav-link" href="#scrollspyHeading1">Equipo</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#scrollspyHeading2">Historia</a>
+      <a class="nav-link" href="#scrollspyHeading2">Especialidades</a>
     </li>
-    <li class="nav-item dropdown">
+    <li class="nav-item">
+      <a class="nav-link" href="#scrollspyHeading3">Comentarios</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#scrollspyHeading4">Comunicate con nosotros</a>
+    </li>
+    <!-- <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Otros</a>
       <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="#scrollspyHeading3">Especialidades</a></li>
@@ -104,16 +121,23 @@
         <li><hr class="dropdown-divider"></li>
         <li><a class="dropdown-item" href="#scrollspyHeading5">Comunícate con nosotros</a></li>
       </ul>
-    </li>
+    </li> -->
   </ul>
 </nav>
 <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="scrollspy-example bg-body-tertiary p-3 rounded-2" tabindex="0">
   <h4 id="scrollspyHeading1">Equipo</h4>
-  <p>Contamos con profesionales experimentados en pruebas manuales y automatizadas para sitios web.</p>
-  <h4 id="scrollspyHeading2">Historia</h4>
-  <p>Empezamos sirviendole a personas como tú, personas que quieran tener calidad en su empresa o que ya la tengan y busquen darle mas velocidad a la revisión de calidad de sus aplicaciones web.</p>
-  <h4 id="scrollspyHeading3">Especialidades</h4>
+  <p>Contamos con profesionales experimentados en desarrollo de software para sitios web y aplicaciones moviles.</p>
+  <h4 id="scrollspyHeading2">Especialidades</h4>
   <ul>
+    <li>
+      Plataformas Web
+    </li>
+    <li>
+      Aplicaciones Android
+    </li>
+    <li>
+      Aplicaciones iOS
+    </li>
     <li>
     Pruebas automatizadas
     <div class="embed-responsive embed-responsive-16by9">
@@ -131,14 +155,14 @@
       Asesoria especializada (si quieres saber si estan desarrollando bien tu sitio web)
     </li>
   </ul>
-  <h4 id="scrollspyHeading4">Comentarios</h4>
+  <h4 id="scrollspyHeading3">Comentarios</h4>
   <p>¡Pronto llegan las reseñas!</p>
-  <h4 id="scrollspyHeading5">
+  <h4 id="scrollspyHeading4">
     Comunícate con nosotros
     <a href="https://api.whatsapp.com/send?phone=+573025720019&text=Hola%20estoy%20interesad@%20en%20el%20paquete%20de%20pruebas%20de%20calidad%20de%20cortesia" target="_blank">
     <img src="assets/icons/WhatsAppButtonWhiteMedium.png" alt="WhatsApp" width="180" height="40">
     </a>
-    y solicita un paquete de pruebas gratis de cortesia
+    y solicita un paquete de pruebas gratis de cortesia si ya tienes un sitio web.
   </h4>
   <p>Comunícate con nosotros al  si no puedes encontrar una respuesta a tu pregunta.</p>
 </div>
